--- a/exam/index.html
+++ b/exam/index.html
@@ -1,1 +1,24 @@
+<!DOCTYPE html>
+<html lang="en">
 
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Document</title>
+    <link rel="stylesheet" href="style.css">
+</head>
+
+<body>
+    <div id="div">
+        <button id="flex">Flex</button>
+        <button id="add">Add +</button>
+        <button id="grid">Grid</button>
+        
+    </div>
+    
+    <div id="container">
+
+    </div>
+    <script src="index.js"></script>
+</body>
+</html>
